2009-10-08 08:17  Sandro Santilli <strk@keybit.net>

	* [r2663] tests/unit/Makefile.am: Distribute all of TUT

2009-10-08 07:56  Sandro Santilli <strk@keybit.net>

	* [r2662] capi/geos_c.h.in, source/headers/geos/version.h.vc:
	  Properly set version for win target

2009-10-07 07:53  Sandro Santilli <strk@keybit.net>

	* [r2661] capi/geos_c.cpp, capi/geos_c.h.in, capi/geos_ts_c.cpp,
	  tests/unit/capi/GEOSBufferTest.cpp: Expose single-sided buffering
	  in C-API (see ticket #258)

2009-10-05 21:36  Sandro Santilli <strk@keybit.net>

	* [r2659] source/algorithm/distance/DistanceToPoint.cpp,
	  source/headers/geos/algorithm/distance/DistanceToPoint.h: Drop
	  use of static data in DistanceToPoint class (for thread-safety)

2009-10-05 19:29  Sandro Santilli <strk@keybit.net>

	* [r2658] source/operation/buffer/BufferBuilder.cpp: release memory
	  earlier, and closer to allocation

2009-10-05 19:04  Sandro Santilli <strk@keybit.net>

	* [r2657] source/operation/buffer/BufferBuilder.cpp: Finish
	  plugging leaks. Make check runs with no leaks.

2009-10-05 18:42  Sandro Santilli <strk@keybit.net>

	* [r2656]
	  source/headers/geos/operation/buffer/OffsetCurveBuilder.h:
	  another memory management doc

2009-10-05 18:40  Sandro Santilli <strk@keybit.net>

	* [r2655]
	  source/headers/geos/operation/buffer/OffsetCurveBuilder.h,
	  source/headers/geos/operation/buffer/OffsetCurveSetBuilder.h,
	  source/operation/buffer/OffsetCurveSetBuilder.cpp: Document more
	  memory management issues

2009-10-05 17:20  Sandro Santilli <strk@keybit.net>

	* [r2654] source/operation/buffer/BufferBuilder.cpp,
	  source/operation/buffer/OffsetCurveBuilder.cpp: More memory leak
	  fixes in single-sided buffering implementation

2009-10-05 16:58  Sandro Santilli <strk@keybit.net>

	* [r2653] source/operation/buffer/BufferBuilder.cpp: Plug some
	  memory leaks in single sided buffering implementation

2009-10-05 16:44  Sandro Santilli <strk@keybit.net>
